; ModuleID = '/home/carl/AnghaBench/reactos/drivers/filesystems/ext2/src/extr_fileinfo.c_Ext2IterateAllEa.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/filesystems/ext2/src/extr_fileinfo.c_Ext2IterateAllEa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ext4_xattr_ref = type { i32* }
%struct.ext4_xattr_item = type { i32, i32 }

@EXT4_XATTR_ITERATE_CONT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ext4_xattr_ref*, %struct.ext4_xattr_item*, i32)* @Ext2IterateAllEa to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @Ext2IterateAllEa(%struct.ext4_xattr_ref* %0, %struct.ext4_xattr_item* %1, i32 %2) #0 {
  %4 = alloca %struct.ext4_xattr_ref*, align 8
  %5 = alloca %struct.ext4_xattr_item*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  store %struct.ext4_xattr_ref* %0, %struct.ext4_xattr_ref** %4, align 8
  store %struct.ext4_xattr_item* %1, %struct.ext4_xattr_item** %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load %struct.ext4_xattr_ref*, %struct.ext4_xattr_ref** %4, align 8
  %10 = getelementptr inbounds %struct.ext4_xattr_ref, %struct.ext4_xattr_ref* %9, i32 0, i32 0
  %11 = load i32*, i32** %10, align 8
  store i32* %11, i32** %7, align 8
  %12 = load %struct.ext4_xattr_item*, %struct.ext4_xattr_item** %5, align 8
  %13 = getelementptr inbounds %struct.ext4_xattr_item, %struct.ext4_xattr_item* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = add nsw i32 8, %14
  %16 = add nsw i32 %15, 1
  %17 = load %struct.ext4_xattr_item*, %struct.ext4_xattr_item** %5, align 8
  %18 = getelementptr inbounds %struct.ext4_xattr_item, %struct.ext4_xattr_item* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = add nsw i32 %16, %19
  store i32 %20, i32* %8, align 4
  %21 = load i32, i32* %8, align 4
  %22 = sub nsw i32 %21, 4
  %23 = load i32*, i32** %7, align 8
  %24 = load i32, i32* %23, align 4
  %25 = add nsw i32 %24, %22
  store i32 %25, i32* %23, align 4
  %26 = load i32, i32* @EXT4_XATTR_ITERATE_CONT, align 4
  ret i32 %26
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
